@@ -1,3 +1,9 @@
+2005-07-20  Rodrigo Moya <rodrigo@novell.com>
+
+	* gnome-settings-screensaver.c (gnome_settings_screensaver_load):
+	* gnome-settings-multimedia-keys.c (do_action): try to run
+	gnome-screensaver, and if that fails, run xscreensaver.
+
 2005-07-12  Sebastien Bacher  <seb128@debian.org>
 
 	* modmap-dialog.glade: fix a label form (Closes: #167739).
